# ScandEval

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cuda  Dockerfile.nocuda  LICENSE  README.md  benchmarker.py  build_norec_is_fo.py  bump_version.py  create_tweet_dataset.py  index.html  main.py  makefile  mkdocs.yaml  pyproject.toml  pytest.ini  remove-duplicates.ipynb  requirements.txt  sandbox.ipynb  setup.py  test.py  update_model_list.py
.github/ISSUE_TEMPLATE/: benchmark_dataset_request.yaml  benchmarking_bug.md  benchmarking_bug.yaml  bug.yaml  feature_request.md  feature_request.yaml  missing_benchmarking_dataset.md  missing_benchmarking_dataset.yaml  missing_model_on_leaderboard.md  missing_model_on_leaderboard.yaml  model_evaluation_request.yaml
.github/workflows/: ci.yaml  ci.yml  docs.yaml  docs.yml
api/euroeval/: index.html
api/scandeval/: index.html
config/: language_codes.yaml
config/datasets/: angry-tweets.yaml  mim-gold-ner.yaml  norne-nb.yaml  scala-fo.yaml  suc3.yaml
config/tasks/: la.yaml  ner.yaml  sent.yaml
data/: model_list.yaml
datasets/: dataset_example_commands.txt  index.html
datasets/absabank_imm/: test.jsonl  train.jsonl
datasets/angry_tweets/: raw_train.jsonl  test.jsonl  train.jsonl
datasets/dalaj/: test.jsonl  train.jsonl
datasets/dane/: test.jsonl
datasets/dane_no_misc/: test.jsonl
datasets/danish/: index.html
datasets/ddt/: train.jsonl
datasets/dkhate/: test.jsonl  train.jsonl
datasets/dutch/: index.html
datasets/english/: index.html
datasets/europarl1/: test.jsonl  train.jsonl
datasets/europarl2/: test.jsonl  train.jsonl
datasets/europarl_sent/: test.jsonl  train.jsonl
datasets/europarl_subj/: test.jsonl  train.jsonl
datasets/faroese/: index.html
datasets/fdt/: test.jsonl  train.jsonl
datasets/french/: index.html
datasets/german/: index.html
datasets/icelandic/: index.html
datasets/idt/: test.jsonl
datasets/lcc/: test.jsonl  train.jsonl
datasets/lcc1/: test.jsonl  train.jsonl
datasets/lcc2/: test.jsonl  train.jsonl
datasets/mim_gold_ner/: test.jsonl
datasets/nordial/: test.jsonl  train.jsonl
datasets/norec/: test.jsonl  train.jsonl
datasets/norec_fo/: test.jsonl  train.jsonl
datasets/norec_is/: test.jsonl  train.jsonl
datasets/norne_nb/: test.jsonl
datasets/norne_nn/: test.jsonl
datasets/norwegian/: index.html
datasets/scala_da/: test.jsonl  train.jsonl  val.jsonl
datasets/scala_fo/: test.jsonl  train.jsonl  val.jsonl
datasets/scala_is/: test.jsonl  train.jsonl  val.jsonl
datasets/scala_nb/: test.jsonl  train.jsonl  val.jsonl
datasets/scala_nn/: test.jsonl  train.jsonl  val.jsonl
datasets/scala_sv/: test.jsonl  train.jsonl  val.jsonl
datasets/sdt/: test.jsonl  train.jsonl
datasets/swedish/: index.html
datasets/twitter_sent/: test.jsonl  train.jsonl
datasets/twitter_subj/: test.jsonl  train.jsonl
datasets/wikiann_fo/: test.jsonl  train.jsonl
datasets/wikiann_is/: test.jsonl  train.jsonl
docs/: CNAME  FAQ.md  README.md  faq.md  faqq.md  methodology.md  python-package.md  search.js
docs/datasets/: README.md  bokmaal.md  danish.md  dutch.md  english.md  faroese.md  french.md  german.md  icelandic.md  italian.md  norwegian.md  spanish.md  swedish.md
docs/extras/: radial_plotter.md
docs/leaderboards/: README.md  bokmaal.md  danish.md  dutch.md  english.md  european.md  faroese.md  french.md  german.md  icelandic.md  mainland-scandinavian.md  norwegian.md  swedish.md
docs/source/: conf.py  index.rst  modules.rst  scandeval.benchmarks.abstract.rst  scandeval.benchmarks.rst  scandeval.rst
docs/tasks/: README.md  common-sense-reasoning.md  knowledge.md  linguistic-acceptability.md  named-entity-recognition.md  reading-comprehension.md  sentiment-classification.md  speed.md  summarization.md
extras/radial_plotter/: index.html
faq/: index.html
gfx/: euroeval.xcf
leaderboards/: index.html
leaderboards/danish/: index.html
leaderboards/dutch/: index.html
leaderboards/english/: index.html
leaderboards/european/: index.html
leaderboards/faroese/: index.html
leaderboards/french/: index.html
leaderboards/german/: index.html
leaderboards/icelandic/: index.html
leaderboards/mainland-scandinavian/: index.html
leaderboards/norwegian/: index.html
leaderboards/swedish/: index.html
methodology/: index.html
notebooks/: remove-duplicates.ipynb  scandeval-truncation.ipynb  scandi-grammar.ipynb
python-package/: index.html
scandeval/: __init__.py  angry_tweets.py  base.py  benchmark.py  binary_classification.py  cli.py  dane.py  datasets.py  ddt_dep.py  ddt_pos.py  dkhate.py  europarl1.py  europarl2.py  europarl_sent.py  europarl_subj.py  evaluator.py  lcc.py  lcc1.py  lcc2.py  nordial.py  norec.py  sentiment_classification.py  text_classification.py  token_classification.py  twitter_sent.py  twitter_subj.py  utils.py
scandeval/benchmarks/: __init__.py  absabank_imm.py  angry_tweets.py  dalaj.py  dane.py  dane_no_misc.py  ddt_dep.py  ddt_pos.py  dkhate.py  fdt_dep.py  (+31 more)
search/: search_index.json
src/: __init__.py  dane.py
tasks/: index.html
tests/: __init__.py  conftest.py  test_benchmark_config_factory.py  test_benchmark_dataset.py  test_benchmarker.py  test_callbacks.py  test_cli.py  test_config.py  test_constants.py  test_data_loading.py  test_data_models.py  test_dataset_configs.py  test_dataset_factory.py  test_dataset_tasks.py  test_enums.py  test_exceptions.py  test_finetuning.py  test_generation.py  test_hf_hub.py  test_human_evaluation.py  test_languages.py  test_model_cache.py  test_model_config.py  test_model_loading.py  test_named_entity_recognition.py  test_ner.py  test_openai_models.py  test_protocols.py  test_qa.py  test_question_answering.py  test_question_answering_trainer.py  test_scores.py  test_sequence_classification.py  test_speed_benchmark.py  test_structured_generation_utils.py  test_tasks.py  test_text_classification.py  test_text_to_text.py  test_training_args_with_mps_support.py  test_types.py  (+2 more)
(+475 files in other folders)
